# python-pack

./: .gitignore  .ruff.toml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yaml
examples/todo/: run_todo_app  todo_app.py
src/python_pack/: utils.py
tests/: test_utils.py
